# weight-tracker

./: .gitignore  manage.py  pyproject.toml
templates/: base.html  create.html  delete.html  detail_view.html  home.html  update.html
tracker_project/: asgi.py  settings.py  urls.py  wsgi.py
weights/: admin.py  models.py  urls.py  views.py
weights/migrations/: 0001_initial.py
weights/static/css/: style.css
